--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,11 @@ jobs:
           node-version: lts/*
           cache: pnpm
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -89,11 +94,6 @@ jobs:
             libappindicator3-dev \
             librsvg2-dev \
             patchelf
-
-      - name: Enable Corepack
-        run: |
-          corepack enable
-          corepack prepare pnpm@10 --activate
 
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
